k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    autopilot.gke.io/resource-adjustment: >-
      {"input":{"containers":[{"limits":{"cpu":"4","ephemeral-storage":"2Gi","memory":"4Gi"},"requests":{"cpu":"2","ephemeral-storage":"2Gi","memory":"4Gi"},"name":"ddgai-1"}]},"output":{"containers":[{"limits":{"cpu":"2","ephemeral-storage":"2Gi","memory":"4Gi"},"requests":{"cpu":"2","ephemeral-storage":"2Gi","memory":"4Gi"},"name":"ddgai-1"}]},"modified":true}
  labels:
    app: gooey-streamlit
  managedFields:
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:replicas': {}
      manager: vpa-recommender
      operation: Update
      subresource: scale
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app': {}
        'f:spec':
          'f:progressDeadlineSeconds': {}
          'f:revisionHistoryLimit': {}
          'f:selector': {}
          'f:strategy':
            'f:rollingUpdate':
              .: {}
              'f:maxSurge': {}
              'f:maxUnavailable': {}
            'f:type': {}
          'f:template':
            'f:metadata':
              'f:labels':
                .: {}
                'f:app': {}
            'f:spec':
              'f:dnsPolicy': {}
              'f:restartPolicy': {}
              'f:schedulerName': {}
              'f:securityContext': {}
              'f:terminationGracePeriodSeconds': {}
      manager: GoogleCloudConsole
      operation: Update
      time: '2022-11-16T05:35:19Z'
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:gcb-build-id': {}
            'f:kubectl.kubernetes.io/last-applied-configuration': {}
          'f:labels':
            'f:app.kubernetes.io/version': {}
        'f:spec':
          'f:template':
            'f:metadata':
              'f:annotations':
                'f:gcb-build-id': {}
              'f:labels':
                'f:app.kubernetes.io/version': {}
            'f:spec':
              'f:containers':
                'k:{"name":"ddgai-1"}':
                  .: {}
                  'f:env':
                    .: {}
                    'k:{"name":"DARS_API_ROOT"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"GOOGLE_APPLICATION_CREDENTIALS_JSON"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:secretKeyRef': {}
                    'k:{"name":"GOOGLE_CLIENT_ID"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"GOOSEAI_API_KEY"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"GS_BUCKET_NAME"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"OPENAI_API_KEY"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"POSTMARK_API_TOKEN"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"REPLICATE_API_TOKEN"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"SECRET_KEY"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"STREAMLIT_SERVER"}':
                      .: {}
                      'f:name': {}
                      'f:value': {}
                    'k:{"name":"UBERDUCK_KEY"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                    'k:{"name":"UBERDUCK_SECRET"}':
                      .: {}
                      'f:name': {}
                      'f:valueFrom':
                        .: {}
                        'f:configMapKeyRef': {}
                  'f:image': {}
                  'f:imagePullPolicy': {}
                  'f:name': {}
                  'f:resources':
                    .: {}
                    'f:limits':
                      .: {}
                      'f:cpu': {}
                      'f:ephemeral-storage': {}
                      'f:memory': {}
                    'f:requests':
                      .: {}
                      'f:cpu': {}
                      'f:ephemeral-storage': {}
                      'f:memory': {}
                  'f:securityContext':
                    .: {}
                    'f:capabilities':
                      .: {}
                      'f:drop': {}
                  'f:terminationMessagePath': {}
                  'f:terminationMessagePolicy': {}
      manager: kubectl-client-side-apply
      operation: Update
      time: '2022-11-16T07:03:18Z'
    - apiVersion: apps/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:deployment.kubernetes.io/revision': {}
        'f:status':
          'f:availableReplicas': {}
          'f:conditions':
            .: {}
            'k:{"type":"Available"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
            'k:{"type":"Progressing"}':
              .: {}
              'f:lastTransitionTime': {}
              'f:lastUpdateTime': {}
              'f:message': {}
              'f:reason': {}
              'f:status': {}
              'f:type': {}
          'f:observedGeneration': {}
          'f:readyReplicas': {}
          'f:replicas': {}
          'f:updatedReplicas': {}
      manager: kube-controller-manager
      operation: Update
      subresource: status
      time: '2022-11-16T07:06:25Z'
  name: gooey-streamlit
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gooey-streamlit
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gooey-streamlit
    spec:
      containers:
        - env:
            - name: STREAMLIT_SERVER
              value: '1'
          image: gcr.io/dara-c1b52/github.com/dara-network/ddgai
          imagePullPolicy: IfNotPresent
          name: gooey-streamlit
          resources:
            limits:
              cpu: '4'
              ephemeral-storage: 2Gi
              memory: 4Gi
            requests:
              cpu: '4'
              ephemeral-storage: 2Gi
              memory: 4Gi
          securityContext:
            capabilities:
              drop:
                - NET_RAW
        - env:
            - name: API_SERVER
              value: '1'
          image: gcr.io/dara-c1b52/github.com/dara-network/ddgai
          imagePullPolicy: IfNotPresent
          name: gooey-api
          resources:
            limits:
              cpu: '4'
              ephemeral-storage: 2Gi
              memory: 4Gi
            requests:
              cpu: '4'
              ephemeral-storage: 2Gi
              memory: 4Gi
          securityContext:
            capabilities:
              drop:
                - NET_RAW
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      tolerations:
        - effect: NoSchedule
          key: kubernetes.io/arch
          operator: Equal
          value: amd64
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/neg: '{"ingress":true}'
    cloud.google.com/neg-status: >-
      {"network_endpoint_groups":{"8001":"k8s1-61b64d54-default-gooey-streamlit-8s7x9-8001-c86daa0d"},"zones":["us-central1-b","us-central1-c","us-central1-f"]}
  generateName: gooey-streamlit-
  labels:
    app: gooey-streamlit
  managedFields:
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:generateName': {}
          'f:labels':
            .: {}
            'f:app': {}
            'f:app.kubernetes.io/managed-by': {}
            'f:app.kubernetes.io/name': {}
            'f:app.kubernetes.io/version': {}
        'f:spec':
          'f:internalTrafficPolicy': {}
          'f:ports':
            .: {}
            'k:{"port":8001,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
            'k:{"port":8002,"protocol":"TCP"}':
              .: {}
              'f:name': {}
              'f:port': {}
              'f:protocol': {}
              'f:targetPort': {}
          'f:selector': {}
          'f:sessionAffinity': {}
          'f:type': {}
      manager: GoogleCloudConsole
      operation: Update
      time: '2022-11-16T07:04:49Z'
    - apiVersion: v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:annotations':
            'f:cloud.google.com/neg-status': {}
      manager: glbc
      operation: Update
      subresource: status
      time: '2022-11-16T07:06:34Z'
  name: gooey-streamlit-8s7x9
  namespace: default
spec:
  clusterIP: 10.18.129.202
  clusterIPs:
    - 10.18.129.202
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: 8002-to-8002-tcp
      port: 8002
      protocol: TCP
      targetPort: 8002
    - name: 8001-to-8001-tcp
      port: 8001
      protocol: TCP
      targetPort: 8001
  selector:
    app: gooey-streamlit
  sessionAffinity: None
  type: ClusterIP
