k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gooey-service
  labels:
    app: gooey-streamlit
spec:
  type: NodePort
  selector:
    app: gooey-streamlit
  ports:
  - port: 8001
    targetPort: 8001
  - port: 8002
    targetPort: 8002
