k8s/api-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: gooey-api-service
  labels:
    app: gooey-api
spec:
  type: NodePort
  selector:
    app: gooey-api
  ports:
  - port: 8001
    targetPort: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gooey-api-1-ingress
  annotations:
    networking.gke.io/managed-certificates: gooey-us-1-api-cert
    kubernetes.io/ingress.global-static-ip-name: gooey-api
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "https-redirect"
    kubernetes.io/ingress.allow-http: "true"
  labels:
    app: gooey-api
spec:
  defaultBackend:
    service:
      name: gooey-api-service
      port:
        number: 8001
