k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gooey-streamlit-1-ingress
  annotations:
    networking.gke.io/managed-certificates: gooey-us-1-app-cert
    kubernetes.io/ingress.global-static-ip-name: gooey-streamlit
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "https-redirect"
    kubernetes.io/ingress.allow-http: "true"
  labels:
    app: gooey-streamlit
spec:
  defaultBackend:
    service:
      name: gooey-service
      port:
        number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gooey-api-1-ingress
  annotations:
    networking.gke.io/managed-certificates: gooey-us-1-api-cert
    kubernetes.io/ingress.global-static-ip-name: gooey-api-us-1
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/v1beta1.FrontendConfig: "https-redirect"
    kubernetes.io/ingress.allow-http: "true"
  labels:
    app: gooey-api
spec:
  defaultBackend:
    service:
      name: gooey-service
      port:
        number: 8002
